--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/inicio.css">
+    <link rel="stylesheet" href="./styles/css/font-awesome.css">
     <title>EstudandoJS</title>
 </head>
 
@@ -25,7 +26,8 @@
                     </ul>
                 </nav>
             </div>
-            <div class="icons"></div>
+            <div class="icons">
+            </div>
         </header>
         <main>
             <div class="banner">
