--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
         </header>
         <main>
             <div class="banner">
-                <img src="./imagens/77929c41-b8da-4ddf-8f1f-35a8f6d73a59-profile_banner-480.jpeg" alt="">
+                <img id="banner" src="./imagens/banner1.jpeg" alt="Banner">
+                <div class="btn">
+                    <img id="previous" class="previous" src="/imagens/next.png" alt="previous">
+                    <img id="next" class="next" src="/imagens/next.png" alt="previous">
+                </div>
             </div>
             <div class="main">
                 <div class="sidebar"></div>
@@ -39,6 +43,7 @@
             </div>
         </main>
     </div>
+    <script src="/code/code.js"></script>
 </body>
 
 </html>
